Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="logo-icon">
                     <i class="fas fa-atom"></i>
                 </div>
-                <span class="logo-text">XYZ <span class="logo-highlight">ইনস্টিটিউট</span></span>
+                <span class="logo-text">নিউটন  <span class="logo-highlight">ইনস্টিটিউট</span></span>
             </a>
 
             <div class="nav-menu" id="navMenu">
@@ -536,4 +536,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
