--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="logo-icon">
                     <i class="fas fa-atom"></i>
                 </div>
-                <span class="logo-text">নিউটন  <span class="logo-highlight">ইনস্টিটিউট</span></span>
+                <span class="logo-text">নিউটন <span class="logo-highlight">ইনস্টিটিউট</span></span>
             </a>
 
             <div class="nav-menu" id="navMenu">
@@ -529,12 +529,11 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; ২০২৪ নিউটন ইনস্টিটিউট। সকল স্বত্ব সংরক্ষিত।</p>
-                <p>ডিজাইন ও ডেভেলপমেন্ট: Venture IT</p>
+                <p>ডিজাইন ও ডেভেলপমেন্ট: <a href="https://ventureit.tech/">Venture It</a></p>
             </div>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
-
 </html>
